Fix output text

--- a/LR1.ipynb
+++ b/LR1.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "c89955b4",
    "metadata": {},
    "outputs": [],
@@ -161,17 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "id": "0cf985bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Стала{стал=VERB} стабильнёе{стабильнее=COMP} б{б=PRCL} ю{ю=NOUN} 123{123=UNKN} 33{33=UNKN} 3{3=UNKN} 6{6=UNKN} экономическая{экономический=ADJF} и{и=CONJ} политическая{политический=ADJF} обстановка{обстановка=NOUN} предприятия{предприятие=NOUN} вывели{вывел=VERB} из{из=PREP} тени{теню=VERB} зарплаты{зарплата=NOUN} сотрудников{сотрудник=NOUN}\\nВсе{весь=ADJF} Гришины{гришины=NOUN} одноклассники{одноклассник=NOUN} уже{уж=NOUN} побывали{побывал=VERB} за{за=PREP} границей{граница=NOUN} он{он=NPRO} был{есть=VERB} чуть{чуть=ADVB} ли{ли=CONJ} не{не=PRCL} единственным{единственный=ADJF} кого{кто=NPRO} не{не=PRCL} вывозили{вывожу=VERB} никуда{никуда=ADVB} дальше{дальше=COMP} Красной{красная=NOUN} Пахры{пахра=NOUN}'"
+       "'Стала{стал=VERB} стабильнее{стабильнее=COMP} экономическая{экономический=ADJF} и{и=CONJ} политическая{политический=ADJF} обстановка{обстановка=NOUN} предприятия{предприятие=NOUN} вывели{вывел=VERB} из{из=PREP} тени{теню=VERB} зарплаты{зарплата=NOUN} сотрудников{сотрудник=NOUN}\\nВсе{весь=ADJF} Гришины{гришины=NOUN} одноклассники{одноклассник=NOUN} уже{уж=NOUN} побывали{побывал=VERB} за{за=PREP} границей{граница=NOUN} он{он=NPRO} был{есть=VERB} чуть{чуть=ADVB} ли{ли=CONJ} не{не=PRCL} единственным{единственный=ADJF} кого{кто=NPRO} не{не=PRCL} вывозили{вывожу=VERB} никуда{никуда=ADVB} дальше{дальше=COMP} Красной{красная=NOUN} Пахры{пахра=NOUN}'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
