Add writing multiple lemmata into dict in parse_lemmata function

--- a/LR1.ipynb
+++ b/LR1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d2627dba",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "912fd94a",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "0469ffde",
    "metadata": {},
    "outputs": [],
@@ -62,13 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "9c87426d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "f6f04bf7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse_lemmata(root):\n",
-    "    lemmata_dict = {}\n",
+    "    lemmata_dict = defaultdict(list)\n",
     "    lemmata_section = root.find('lemmata')\n",
     "\n",
     "    for lemma_elem in lemmata_section.findall('lemma'):\n",
@@ -80,20 +90,44 @@
     "                    \n",
     "        for f_elem in lemma_elem.findall('f'):\n",
     "            form_text = f_elem.get('t', '')\n",
-    "            if form_text and not form_text in lemmata_dict: \n",
-    "                lemmata_dict[form_text.replace('ё', 'е')] = (lemma_text, main_grammem)\n",
+    "            if form_text: \n",
+    "                new_entry = (lemma_text, main_grammem)\n",
+    "                \n",
+    "                if new_entry not in lemmata_dict[form_text]:\n",
+    "                    lemmata_dict[form_text].append(new_entry)\n",
     "            \n",
-    "    return lemmata_dict"
+    "    return dict(lemmata_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "6a46115a",
    "metadata": {},
    "outputs": [],
    "source": [
     "lemmata_dict = parse_lemmata(dict_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1bb4684d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('абдужалия', 'NOUN')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lemmata_dict['абдужалия']"
    ]
   },
   {
@@ -106,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "75dc6551",
    "metadata": {},
    "outputs": [],
@@ -116,8 +150,16 @@
     "    return [token for token in tokens if token]\n",
     "\n",
     "def normalize(word):\n",
-    "    return word.lower().replace('ё', 'е')"
+    "    return word.lower()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87f34b96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
